# fastapi_testcase

./: .env  docker-compose.yml  pyproject.toml  test.env
.db/: postmaster.pid
.db/base/1/: 1259  2619  2619_vm  2696  pg_internal.init
.db/base/5/: 1247  1249  1259  16388  16391  16393  16394  16400  16402  16403  16408  16409  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  3455  5002  (+1 more)
.db/global/: 1260  pg_control  pg_internal.init
.db/pg_stat/: pgstat.stat
.db/pg_xact/: 0000
.github/workflows/: docker-image.yml
.test_db/base/1/: pg_internal.init
.test_db/base/5/: 1247  1249  1259  2224  2579  2604  2606  2608  2610  2619  2619_fsm  2619_vm  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2696  2699  2701  2702  2703  2704  2840  2841  3455  5002  pg_internal.init
.test_db/global/: 1260  pg_control  pg_internal.init
.test_db/pg_stat/: pgstat.stat
alembic/: README  env.py
alembic/versions/: 06085bf69bf2_create_tables.py  a08f2b1827f7_create_tables.py
database/: config.py  core.py  models.py  orm.py
server/: Dockerfile  datamodels.py  main.py
tests/: conftest.py  test_main.py  test_orm.py
