[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Vitaly <lildid32@mail.ru>"]
readme = "README.md"

package-mode = true

packages = [
    { include = "server" }
]

[tool.poetry.scripts]
start = "server.main:start"

[tool.pytest.ini_options]

pythonpath = [
    "."
]

asyncio_mode = "auto"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.35"
fastapi = "^0.115.0"
alembic = "^1.13.2"
poetry = "^1.8.3"
uvicorn = "^0.30.6"
pytest = "^8.3.3"
httpx = "^0.27.2"
psycopg2-binary = "^2.9.9"
pydantic-settings = "^2.5.2"
asyncpg = "^0.29.0"
pytest-asyncio = "^0.24.0"
flake8 = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
